# DocumentIndexer

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
src/document_indexer/: __init__.py
src/document_indexer/indexer/: __init__.py  __main__.py  builder.py  db.py  gui.py  ingest.py  schema.py
src/document_indexer/ocr/: __init__.py  __main__.py  cli.py  extract.py  ia.py  lang.py  locro.py  metadata.py  output.py  progress.py  tesseract.py
tests/: test_builder.py  test_db.py  test_ia.py  test_ingest.py  test_lang.py  test_schema.py
