[project]
name = "document-indexer"
version = "0.1.0"
description = "PDF to searchable text — Tesseract OCR pipeline with optional language auto-detection, plus an SQLite FTS5 indexer with a desktop GUI."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "polymood" }]
keywords = ["pdf", "ocr", "tesseract", "search", "fts5", "indexer", "ndjson"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Text Processing :: Indexing",
    "Topic :: Multimedia :: Graphics :: Capture",
    "Topic :: Utilities",
]

dependencies = [
    "pymupdf>=1.24",
    "pytesseract>=0.3.10",
    "pillow>=10.0",
    "loguru>=0.7",
    "tenacity>=8.0",
    "lingua-language-detector>=2.0",
    "tantivy>=0.22",
    "PySide6>=6.6",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6",
    "mypy>=1.10",
    "pre-commit>=3.7",
    "pytest>=8.0",
]

[project.scripts]
docindex-ocr = "document_indexer.ocr.cli:main"
docindex-gui = "document_indexer.indexer.gui:main"

[project.urls]
Repository = "https://github.com/polymood/DocumentIndexer"
Issues = "https://github.com/polymood/DocumentIndexer/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/document_indexer"]

[dependency-groups]
dev = [
    "ruff>=0.6",
    "mypy>=1.10",
    "pre-commit>=3.7",
    "pytest>=8.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "W",
    "I",
    "N",
    "UP",
    "B",
    "SIM",
    "RUF",
    "C4",
    "PTH",
]
ignore = [
    "E501",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["N802", "N806"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.mypy]
python_version = "3.10"
strict = true
warn_unreachable = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_any_generics = true
no_implicit_optional = true
check_untyped_defs = true
files = ["src", "tests"]

[[tool.mypy.overrides]]
module = ["fitz", "pytesseract", "lingua.*", "PySide6.*", "tantivy"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-ra", "--strict-markers"]
